# HVVR

./: CMakeLists.txt  README.md
libraries/hvvr/: CMakeLists.txt
libraries/hvvr/raycaster/: CMakeLists.txt  gpu_camera.cu  gpu_foveated.cu  gpu_samples.cu  gpu_samples.h  intersect.cu  linux_support.h  render.cpp  resolve.cu  sample_hierarchy.h  traversal.cpp  traversal.h  traverse_avx.h
libraries/hvvr/raycaster_cmake/: CMakeLists.txt
libraries/hvvr/samples_shared/: CMakeLists.txt  model_import.cpp  model_import_fbx.cpp
libraries/hvvr/shared/: CMakeLists.txt  avx.h  avx_util.h  cuda_decl.h  dynamic_array.h  timer.cpp  util.h  vector_math.h
projects/: CMakeLists.txt
projects/hvvr_samples/: CMakeLists.txt
projects/hvvr_samples/modelconvert/: CMakeLists.txt
projects/hvvr_samples/modelviewer/: CMakeLists.txt  ModelViewerConfig.h  ModelViewerLinux.cpp  ModelViewerLinux.h  modelviewer.cpp
